# home-telemetry

./: .gitignore  CLAUDE.md  README.md  conftest.py  docker-compose.yml
docs/: CONTEXT.md  prd.md
docs/adr/: 001-pipeline-design-constraints.md  002-pipeline-architecture.md  003-gateway-rust-mqtt-to-otlp.md
docs/issues/: 01-mock-sensor-publisher.md  02-otel-collector-kafka-infrastructure.md  03-rust-gateway.md  04-timescaledb-readings-raw-schema.md  05-flink-raw-sink-job.md  06-timescaledb-readings-aggregated-schema.md  07-flink-aggregation-job.md  08-flink-alert-job-deferred.md  09-timescaledb-hourly-continuous-aggregate.md  10-grafana-dashboard.md  11-wokwi-gateway-integration-test.md  12-raspberry-pi-production-deployment.md
firmware/: Dockerfile  mock_sensor.py
firmware/tests/: test_mock_sensor.py
flink/: Dockerfile  dependency-reduced-pom.xml  pom.xml
flink/src/main/java/com/example/: AggregationJob.java  AlertEvent.java  AlertJob.java  OtlpDeserializer.java  RawSinkJob.java  SensorReading.java  WindowResult.java
flink/src/test/java/com/example/: AlertDetectorTest.java  OtlpDeserializerTest.java  TemperatureAggregatorTest.java
gateway/: Cargo.toml  Dockerfile
gateway/src/: main.rs
grafana/dashboards/: temperature.json
grafana/provisioning/datasources/: timescaledb.yaml
mosquitto/: mosquitto.conf
otel/: collector-config.yaml
timescaledb/: init.sql
